--- a/packages/spa/package.json
+++ b/packages/spa/package.json
@@ -12,7 +12,8 @@
     "vue": "^3.5.22",
     "@distribuicao/core": "*",
     "chart.js": "^4.4.1",
-    "vue-chartjs": "^5.3.0"
+    "vue-chartjs": "^5.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^24.6.0",
