--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ build/
 *.js
 *.js.map
 !jest.config.js
+!tailwind.config.js
+!postcss.config.js
+!vite.config.js
 
 # Cobertura de testes
 coverage/
